--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@inquirer/prompts": "^7.8.0",
-    "commander": "^14.0.0"
+    "commander": "^14.0.0",
+    "ora": "^8.2.0"
   }
 }
