refactor: switch to jest-diff for better output and simpler code
- Replace custom diff implementation with jest-diff
- Reduce code from 229 to 178 lines (22% reduction)
- Get professional GitHub-style diff output
- Automatic word-level highlighting built-in
- Smaller bundle size (jest-diff: 85KB vs diff: 492KB)

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@inquirer/prompts": "^7.8.0",
     "chalk": "^5.5.0",
     "commander": "^14.0.0",
-    "diff": "^8.0.2",
+    "jest-diff": "^30.0.5",
     "ora": "^8.2.0"
   }
 }
