--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "chalk": "^5.5.0",
     "commander": "^14.0.0",
     "jest-diff": "^30.0.5",
-    "ora": "^8.2.0"
+    "ora": "^8.2.0",
+    "zod": "^4.0.17"
   }
 }
