--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openspec",
+  "name": "@fission-ai/openspec",
   "version": "0.1.0-beta.0",
   "description": "AI-native system for spec-driven development",
   "keywords": [
@@ -18,6 +18,7 @@
   "author": "OpenSpec Contributors",
   "type": "module",
   "publishConfig": {
+    "access": "public",
     "tag": "next"
   },
   "exports": {
