--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@inquirer/core": "^10.2.2",
     "@inquirer/prompts": "^7.8.0",
     "chalk": "^5.5.0",
     "commander": "^14.0.0",
