chore(release): publish to latest

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "author": "OpenSpec Contributors",
   "type": "module",
   "publishConfig": {
-    "access": "public",
-    "tag": "next"
+    "access": "public"
   },
   "exports": {
     ".": {
