--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -69,4 +69,4 @@ jobs:
       - run: pnpm test
 
       - name: Publish
-        run: pnpm publish --access public --provenance --no-git-checks --tag next
+        run: pnpm publish --access public --provenance --no-git-checks
